--- a/Homework 1/MA678 HW1.Rmd
+++ b/Homework 1/MA678 HW1.Rmd
@@ -22,14 +22,14 @@ a <- 5
 b <- 7
 x0 <- runif(n0, 0, 50)
 
-e <- rnorm(n0, 0, 3)
-y0 <- a+ b*x0 + e
+e0 <- rnorm(n0, 0, 3)
+y0 <- a+ b*x0 + e0
 
 # (a) Fit a regression line to these data and display the output.
 fake_a <- data.frame(x0, y0)
 fit_a <- stan_glm(y0 ~ x0, data = fake_a, refresh =0 )
 print(fit_a, digits=2)
-```
+``` 
 
 
 ### 7.2b 
@@ -153,9 +153,11 @@ Use simulated data to compare least squares estimation to default Bayesian regre
 Simulate 100 data points from the model, y = 2 + 3x + error, with predictors x drawn from  a uniform distribution from 0 to 20, and with independent errors drawn from the normal  distribution with mean 0 and standard deviation 5. Fit the regression of y on x data using  lm and stan_glm (using its default settings) and check that the two programs give nearly  identical results. 
 
 ```{r}
-x_2 <- runif(100, 0, 20)
-e <- rnorm(n, 0, 5)
-y_2 <- 2 + 3*x + e
+e1 <- rnorm(n, 0, 5)
+
+x_2 <- runif(n, 0, 20)
+
+y_2 <- 2 + 3*x_2 + e1
 fake_2 = data.frame(x_2, y_2)
 fit_lm = lm(y_2 ~ x_2, data = fake_2)
 fit_stanlm = stan_glm(y_2 ~ x_2, data = fake_2, refresh =0 )
@@ -182,12 +184,12 @@ abline(a = a_hat_stan, b = b_hat_stan)
 Repeat the two steps above, but try to create conditions for your simulation so that lm and  stan_glm give much different results. 
 
 ```{r,echo=F}
-x_3 <- 0:9
-y_3 <- c(0, 5, 20, 80, 160, 420, 880, 1500, 2500, 5800)
+x_3 <- c(0, -80, 5, 0, -6, 9, 300, 1000, -1, 0)
+y_3 <- c(9000, 5, 200, 0, 1600, 5800, 42, 880, 500, 200)
 fake_3 = data.frame(x_3, y_3)
 fit3_lm = lm(y_3 ~ x_3, data = fake_3, refresh =0 )
 fit3_stan = stan_glm(y_3 ~ x_3, data = fake_3, 
-                     prior_intercept = normal(0, 10))
+                     )
 plot(fake_3$x_3, fake_3$y_3)
 a_hat_lm <- coef(fit3_lm)[1]
 b_hat_lm <- coef(fit3_lm)[2]
@@ -207,15 +209,16 @@ Display your simulated data as a graph of y vs. x, using dots and circles for th
 n <- 100
 z1 <- rbinom(n, 1, 0.5)
 
-x1 <- rnorm(n, mean(z), 1)
+x1 <- rnorm(n, mean(z1), 1)
 error <- rnorm(n, 0, 3)
-y1 <- 1 + 2*x1 - z -2*x1*z1 + error
+y1 <- 1 + 2*x1 - z1 -2*x1*z1 + error
 xyz <- data.frame(x1, z1, y1)
 ggplot(data = xyz)+
   geom_point(
-    mapping = aes(x=x1, y=y1), shape=z1)+
-  # scale_shape_manual(values = c(1, 16))
-print(z1)
+    mapping = aes(x=x1, y=y1, shape = factor(z1)))+
+  scale_shape_manual(values = c(1, 16))
+# print(z1)
+
 
 ```
 
@@ -225,14 +228,15 @@ Fit a regression predicting y from x and z with no interaction. Make a graph wit
 ```{r}
 
 fit_xyz <- stan_glm(y1 ~ x1 + z1, data = xyz, refresh =0 )
-# print(fit_xyz)
+
 int_0 <- coef(fit_xyz)[1]
 slope1 <- coef(fit_xyz)[2]
 z_coef <- coef(fit_xyz)[3]
 int_1 <- int_0 + z_coef
-print(paste(b_hat_int, b_hat_x, b_hat_z))
+
 ggplot(data = xyz)+
-  geom_point(mapping = aes(x = x1, y = y1), shape = z1)+
+  geom_point(mapping = aes(x = x1, y = y1, shape = factor(z1) ))+
+  scale_shape_manual(values = c(1, 16))+
   geom_abline(
     aes(intercept = int_0, slope = slope1)
     )+
@@ -247,7 +251,7 @@ Fit a regression predicting y from x, z, and their interaction. Make a graph wit
 
 ```{r}
 fit_xyz2 <- stan_glm(y1 ~ x1 + z1 + x1:z1, data = xyz, refresh =0 )
-print(fit_xyz2)
+
 int_z0 <- coef(fit_xyz2)[1]
 slope_x0 <- coef(fit_xyz2)[2]
 z_coef2 <- coef(fit_xyz2)[3]
@@ -259,10 +263,11 @@ slope_x1 = slope_x0 + xz_coef
 
 ggplot(data = xyz)+
   geom_point(
-    mapping = aes(x = x1, y = y1), shape = z1
-    )+
+    mapping = 
+      aes(x = x1, y = y1, shape = factor(z1)))+
+  scale_shape_manual(values = c(1, 16))+
   geom_abline(
-    aes(intercept = int_z0, slope = slope_x0)
+    aes(intercept = int_z0, slope = slope_x0), color = "grey"
   )+
   geom_abline(
     aes(intercept = int_z1, slope = slope_x1)
@@ -278,15 +283,36 @@ Here is the output from a fitted linear regression of outcome y on  pre-treatmen
 ```
 
 ### 10.2a
-Write the equation of the estimated regression line of y on x for the treatment group and the  control group, and the equation of the estimated regression line of y on x for the control group. 
+Write the equation of the estimated regression line of y on x for the treatment group and the control group, and the equation of the estimated regression line of y on x for the control group. 
 
+Answer:
+Equation for both treatment and control group: y = 1.2 + 1.6x + 2.7z + 0.7x*z
+Equation for control group(z=0): y = 1.2 + 1.6x
 ```{r}
+
 ```
 
 ### 10.2b
 Graph with pen on paper the two regression lines, assuming the values of x fall in the range  (0, 10). On this graph also include a scatterplot of data (using open circles for treated units  and dots for controls) that are consistent with the fitted model. 
 
 ```{r}
+x2 <- runif(100, 0, 10)
+e2 <- rnorm(100, 0, 0.5)
+z2 <- rbinom(100, 1, 0.5)
+# plot(z2)
+y2 <- 1.2 + 1.6*x2 + 2.7*z2 + 0.7*x2*z2 +e2
+xyz2 <- data.frame(x2, y2, z2)
+ggplot(data = xyz2)+
+  geom_point(
+    mapping = aes(x=x2, y=y2, shape = factor(z2))
+  )+
+  scale_shape_manual(values = c(16, 1))+
+  geom_abline(
+    aes(intercept = 1.2, slope = 1.6) 
+  )+
+  geom_abline(
+    aes(intercept = 1.2+2.7, slope = 1.6+0.7), color = "grey"
+  )
 ```
 
 ## 10.5 Regression modeling and prediction: 
@@ -301,8 +327,9 @@ head(kidiq)
 ### 10.5a
 Fit a regression of child test scores on mother’s age, display the data and fitted model,  check assumptions, and interpret the slope coefficient. Based on this analysis, when  do you recommend mothers should give birth? What are you assuming in making this  recommendation? 
 
+Answer:Based on the positive coefficient(0.7) of mother's age on kid's score, assuming momthers' other conditions are the same, I would recommend mothers to give birth later.
 ```{r}
-fit5a <- stan_glm(kid_score ~ mom_age, data = kidiq, refresh =0  )
+fit5a <- stan_glm(kid_score ~ mom_age, data = kidiq, refresh =0)
 print(fit5a)
 plot(kidiq$mom_age, kidiq$kid_score)
 ```
@@ -310,8 +337,9 @@ plot(kidiq$mom_age, kidiq$kid_score)
 ### 10.5b
 Repeat this for a regression that further includes mother’s education, interpreting both slope  coefficients in this model. Have your conclusions about the timing of birth changed? 
 
+Answer: After adding mother's education, the effect of age decreases, but it's still positive, so my conclusion of the timing of birth does not change.
 ```{r}
-fit5b <- stan_glm (kid_score ~ mom_age + mom_hs, data = kidiq, refresh =0 )
+fit5b <- stan_glm (kid_score ~ mom_age + mom_hs, data = kidiq, refresh =0)
 print(fit5b)
 
 ```
@@ -320,6 +348,14 @@ print(fit5b)
 Now create an indicator variable reflecting whether the mother has completed high school or  not. Consider interactions between high school completion and mother’s age. Also create a  plot that shows the separate regression lines for each high school completion status group. 
 
 ```{r}
+fit5c <- stan_glm (kid_score ~ mom_age + mom_hs + mom_age:mom_hs, data = kidiq, refresh =0)
+print(fit5c)
+ggplot(data = kidiq) +
+  geom_point(
+    mapping = aes(x = mom_age, y=kid_score, shape = factor(mom_hs)))+
+  scale_shape_manual(values = c(1, 16))+
+  geom_abline(aes(intercept=coef(fit5c)[1], slope=coef(fit5c)[2]), color = "grey")+
+  geom_abline(aes(intercept =coef(fit5c)[1]+ coef(fit5c)[3], slope=coef(fit5c)[2]+coef(fit5c)[4]))
 
 ```
 
@@ -327,6 +363,14 @@ Now create an indicator variable reflecting whether the mother has completed hig
 Finally, fit a regression of child test scores on mother’s age and education level for the first  200 children and use this model to predict test scores for the next 200. Graphically display  comparisons of the predicted and actual scores for the final 200 children. 
 
 ```{r}
+kid_model <- kidiq[1:200,]
+kid_test <- kidiq[201:400,]
+fit5d <- stan_glm(kid_score ~ mom_hs + mom_age + mom_hs:mom_age, data = kid_model, refresh=0)
+print(fit5d) 
+kidpredict <- coef(fit5d)[1] + coef(fit5d)[2]*kid_test$mom_hs + 
+    coef(fit5d)[3]*kid_test$mom_age + coef(fit5d)[4]* kid_test$mom_hs * kid_test$mom_age
+plot(kidpredict)
+plot(kid_test$kid_score)
 ```
 
 ## 10.6 Regression models with interactions: 
@@ -335,18 +379,34 @@ The folder Beauty contains data (use file beauty.csv)  Beauty and  teaching  eva
 See also Felton, Mitchell, and Stinson (2003) for more on this topic. 
 
 ```{r}
+beauty <- read.csv("beauty.csv")
+head(beauty)
 ```
 
 ### 10.6a
 Run a regression using beauty (the variable beauty) to predict course evaluations (eval),  adjusting for various other predictors. Graph the data and fitted model, and explain the  meaning of each of the coefficients along with the residual standard deviation. Plot the  residuals versus fitted values. 
 
 ```{r}
+fit6a <- stan_glm(eval ~ beauty, data = beauty, refresh = 0)
+print(fit6a)
 ```
 
 ### 10.6b
 Fit some other models, including beauty and also other predictors. Consider at least one  model with interactions. For each model, explain the meaning of each of its estimated  coefficients.
 
+Answer:
+For the first model fit6b1, the intercept means for male instructors whose beauty score is 0, their average evaluation score is 4.21; 
+the coefficient for beauty means that, for male instructors, 1 difference in beauty score corresponds to 0.19 in evaluation score, and for female instructors, 1 difference in beauty score corresponds to (0.19-0.11)=0.08 in evaluation score;
+the coefficient of age is close to zero, meaning age is not a significant predictor for evaluation score;
+the coefficient of female and its interaction with beauty indicate that, comparing instructors with the same beauty scores but with different gender, female instructors on average correspond to (-0.22-0.11)= -0.33 evaluation score than male instructors.
+
+For the second model fit6b2, 
 ```{r}
+fit6b1 <- stan_glm(eval ~ beauty + age + female + female:beauty, data = beauty, refresh = 0)
+print(fit6b1, digits=2)
+
+fit6b2 <- stan_glm(eval ~ beauty + minority + minority:beauty, data = beauty, refresh = 0)
+print(fit6b2)
 ```
 
 ## 10.7 Predictive simulation for linear regression:
