--- a/HW7/hw_mllm_2020.Rmd
+++ b/HW7/hw_mllm_2020.Rmd
@@ -20,7 +20,8 @@ car,
 stringr,
 rstan,
 rstanarm,
-zoo
+zoo,
+tidyverse
 )
 ```
 
@@ -63,68 +64,152 @@ ggplot(aes(x=time,y=sqrt(CD4PCT),color= factor(newpid)),data=hiv.data) +
 2. Each child's data has a time course that can be summarized by a linear fit. Estimate these lines and plot them for all the children.
 
 ```{r}
-
+model1<-lm(y~factor(newpid) -1 + time, data = hiv.data)
+# coef(model1)
+ggplot(data = hiv.data,aes(x=time,y=y,col=factor(newpid))) + geom_point() + geom_smooth(se=F,method = "lm", linetype=1) + theme(legend.position = "none") 
 ```
 
 
 3. Set up a model for the children's slopes and intercepts as a function of the treatment and age at baseline. Estimate this model using the two-step procedure–first estimate the intercept and slope separately for each child, then fit the between-child models using the point estimates from the first step.
 ```{r}
-
+coef<-coef(model1)
+coef_matrix<-matrix(0,nrow = length(coef)-1, ncol=5)
+colnames(coef_matrix)<-c("newpid","intercept","slop","treatment","age")
+newpid<-unique(hiv.data$newpid)
+coef_matrix[,1]<-factor(newpid)
+coef_matrix[,2]<-coef[-length(coef)]
+coef_matrix[,3]<-rep(coef[length(coef)],length(coef)-1)
+a<-hiv.data %>%
+  group_by(factor(newpid)) %>%
+  filter(row_number() == 1) %>% 
+  ungroup %>%
+  dplyr::select(newpid,treatment,age.baseline)
+coef<-merge(coef_matrix[,1:3],a,by="newpid")
+model_intercept<-lm(intercept~treatment + age.baseline,data=coef)
+model_slop<-lm(slop~treatment + age.baseline,data=coef)
+summary(model_intercept)
+summary(model_slop)
 ```
 
 
 4. Write a model predicting CD4 percentage as a function of time with varying intercepts across children. Fit using `lmer()` and interpret the coefficient for time.
 ```{r}
-
+model_2<-lmer(data = hiv.data, sqrt(CD4PCT)~(1|newpid) + time)
+display(model_2)
 ```
+*The average model for all children (complete pooling) is written as:*
+
+$y=4.81-0.39*time$
+
+*With 1% increase in time, the square root scale of CD4 percentage will decrease by 0.39%*
+
 
 
 5. Extend the model in (4) to include child-level predictors (that is, group-level predictors) for treatment and age at baseline. Fit using `lmer()` and interpret the coefficients on time, treatment, and age at baseline.
 
 ```{r}
-
+model_3<-lmer(data = hiv.data, sqrt(CD4PCT)~(1|newpid) + time + treatment + age.baseline)
+display(model_3)
 ```
+*The average model for all children (complete pooling) is written as:*
+
+$y=4.76-0.38*time+0.29*treatment-0.12*age.baseline$
+
+*With 1% increase in time, the square root scale of CD4 percentage will decrease by 0.38%.*
+
+*With 1 increase in treatment, the square root scale of CD4 percentage will increase by 0.29*
+
+*With 1% increase in age.baseline, the square root scale of CD4 percentage will decrease by 0.12%*
+
+
 
 6. Investigate the change in partial pooling from (4) to (5) both graphically and numerically.
 
 ```{r}
-
+data_plot <- as.data.frame(cbind(unlist(ranef(model_2)),unlist(ranef(model_3))))
+colnames(data_plot) <- c("model_2","model_3")
+ggplot(data=data_plot,aes(x=model_2,y=model_3))+geom_point()+geom_smooth()+
+  xlab("Random effcts of reg2")+
+  ylab("Random effects of reg3")
 ```
 
 
 7. Use the model fit from (5) to generate simulation of predicted CD4 percentages for each child in the dataset at a hypothetical next time point.
 
 ```{r}
-
+coef<-coef(model_3)
+add_time<-0.3 #set the next time point is 0.3 bigger than last time point
+newdata<-hiv.data %>%
+  group_by(newpid) %>%
+  arrange(desc(time),.by_group=TRUE) %>%
+  filter(row_number() == 1) %>%   
+  ungroup %>%
+  mutate(CD4PCT=sqrt(CD4PCT)) %>%
+  select(newpid,time,treatment,age.baseline) %>%
+  mutate(time=time+add_time)
+CD4PCT_sqrt_new<-diag(as.matrix(cbind(rep(1,dim(newdata)[1]),newdata[,2:4])) %*% t(coef$newpid))
+result<-cbind(newdata,CD4PCT_sqrt_new^2)
+colnames(result)[5]<-"CD4PCT"
+kable(result)
 ```
 
 8. Use the same model fit to generate simulations of CD4 percentages at each of the time periods for a new child who was 4 years old at baseline.
 
 ```{r}
-
+coef<-fixef(model_3)
+time<-seq(0,2,0.1)#set time 
+X<-cbind(rep(1,length(time)),time,rep(1,length(time)),rep(4,length(time)))#set treatment=1
+pred<-X %*% as.matrix(coef)
+result<-cbind(rep(1,length(time)),time,rep(4,length(time)),pred^2)
+colnames(result)<-c("treatment","time","age.baseline","CD4PCT")
+kable(result)
 ```
 
 
 9. Posterior predictive checking: continuing the previous exercise, use the fitted model from (5) to simulate a new dataset of CD4 percentages (with the same sample size and ages of the original dataset) for the final time point of the study, and record the average CD4 percentage in this sample. Repeat this process 1000 times and compare the simulated distribution to the observed CD4 percentage at the final time point for the actual data.
 ```{r}
-
+newdata<-hiv.data %>%
+  group_by(newpid) %>%
+  arrange(desc(time),.by_group=TRUE) %>%
+  filter(row_number() == 1) %>%
+  select(newpid,treatment,time,age.baseline,CD4PCT)
+newdata_original_mean<-mean(newdata$CD4PCT)
+for(i in 1:1000) {
+  newdata$treatment<-rbernoulli(dim(newdata)[1], p = sum(hiv.data$treatment==1)/dim(hiv.data)[1])
+  newdata$treatment[newdata$treatment==0]<-2
+  model_sim<-lmer(data = hiv.data, sqrt(CD4PCT)~(1|newpid) + time + treatment + age.baseline)
+  re<-predict(model_sim,newdata=newdata)^2
+  if(i==1)
+    result<-re
+  else
+    result<-cbind(result,re)
+}
+ave_CD4PCT<-apply(result,2,mean)
+hist(ave_CD4PCT, xlim = c(21,22.5))
+abline(v=newdata_original_mean,col="red")
 ```
 
 10. Extend the modelto allow for varying slopes for the time predictor.
 ```{r}
-
+model_4<-lmer(y~time+(1+time|newpid),data=hiv.data)
+display(model_4)
 ```
 
 
 11. Next fit a model that does not allow for varying slopes but does allow for different coefficients for each time point (rather than fitting the linear trend).
 ```{r}
-
+model_5<-lmer(y ~ factor(time) + treatment + (1 | newpid),data = hiv.data)
+display(model_5)
 ```
 
 
 12. Compare the results of these models both numerically and graphically.
 ```{r}
-
+data_plot2_inter <- as.data.frame(cbind(unlist(ranef(model_4))[1:226],unlist(ranef(model_5))[1:226]))
+colnames(data_plot2_inter) <- c("model_4","model_5")
+ggplot(data=data_plot2_inter,aes(x=model_4,y=model_5))+geom_point()+geom_smooth()+
+  xlab("Random effects of model_4 intercepts")+
+  ylab("Random effects of model_5 intercepts")
 ```
 
 
